# PT100-P1000-Calculator

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_cmake.yml
cmake/: Options.cmake
include/: PTCalculator.h
src/: CMakeLists.txt  main.cpp
test/catch2/: CMakeLists.txt  constexpr_tests.cpp
